Fix spacing issue

--- a/sass/_base.main.scss
+++ b/sass/_base.main.scss
@@ -4,45 +4,44 @@
 
 
 main {
-    float: left;
-    width: percentage(2360 / 2560);
-    min-height: 480px;
-
-    @media (min-width: 1281px) {
-        width: percentage(2300 / 2560);
-    }
-
-    @media (min-width: 2100px) {
-        width: percentage(1800 / 2560);
-    }
-}
-
-
-.main--home {
-    float: none;
     margin: 0 auto;
+    min-height: 480px;
     padding-top: 180px;
     text-align: center;
-}
+    width: percentage(1800 / 2560);
 
-.main--internal {
-    padding-top: 65px;
+    &.main--home {
+
+        @media (min-width: 1281px) {
+            width: percentage(2300 / 2560);
+        }
+
+        @media (min-width: 2100px) {
+            width: percentage(1800 / 2560);
+        }
+    }
+
+
+    &.main--internal {
+        margin: 0;
+        padding-top: 65px;
+        float: left;
+        text-align: left;
+        width: percentage(1780 / 2560);
+    }
 }
 
 
 .main__title {
+    font-size: 80px;
+    width: percentage(1200 / 1800);
+    margin: 0 auto 0.4em;
 
-    .main--home & {
-        font-size: 80px;
-        width: percentage(1200 / 1800);
-        margin: 0 auto 0.4em;
+    @media (min-width: 1281px) {
+        font-size: 120px;
+    }
 
-        @media (min-width: 1281px) {
-            font-size: 120px;
-        }
-
-        @media (min-width: 2100px) {
-            font-size: 120px;
-        }
+    @media (min-width: 2100px) {
+        font-size: 120px;
     }
 }
