--- a/sass/_generic.dewnrgr.scss
+++ b/sass/_generic.dewnrgr.scss
@@ -6,7 +6,7 @@
  * DEWNR's own customised version of Frutiger
  */
 
-$sagovau-path-fonts: "/fonts/" !default;
+$sagovau-path-fonts: "../fonts/" !default;
 
 
 @font-face {
